fixed comment textarea spilling over on mobile

--- a/assets/css/hike-card.css
+++ b/assets/css/hike-card.css
@@ -100,6 +100,7 @@
 
 .comment {
 	padding: 5px 10px;
+	width: 60%;
 }
 
 .comment-btn {
@@ -203,5 +204,8 @@
 @media all and (max-width: 700px) {
 	.hike-card-comments {
 		max-width: 85%;
+	}
+	.comment {
+		width: 90%;
 	}
 }
